--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1151,3 +1151,19 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 12_1_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/16C101 LightSpeed [FBAN/MessengerLiteForiOS;FBAV/326.1.0.37.112;FBBV/311948716;FBDV/iPhone8,1;FBMD/iPhone;FBSN/iOS;FBSV/12.1.2;FBSS/2;FBCR/;FBID/phone'
+  os:
+    name: iOS
+    version: 12.1.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook Messenger Lite
+    version: 326.1.0.37.112
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 6s
+  os_family: iOS
+  browser_family: Unknown
