--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -612,3 +612,21 @@
     model: Libra 4 3G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; M30_Pro_ROW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.120 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.120
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Teclast
+    model: M30 Pro
+  os_family: Android
+  browser_family: Chrome
