--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6248,7 +6248,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJKLM]|F-02[EFGHLK]|F-03[DEFGKHL]|F-04[EGFHKJ]|F-05[DEFJG]|F-06[EF]|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-41B|F-[45]2A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ|FJL2[12])(?:[);/ ]|$)'
+  regex: '(?:F-01[FHJKLM]|F-02[EFGHLK]|F-03[DEFGKHL]|F-04[EGFHKJ]|F-05[DEFJG]|F-06[EF]|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-41B|F-[45]2A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ|FJL2[12]|RM02)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'F-51A(?:[);/ ]|$)'
@@ -6331,6 +6331,8 @@ Fujitsu:
       model: '$1'
     - regex: 'arrowsM03(?:[);/ ]|$)'
       model: 'Arrows M03'
+    - regex: 'RM02(?:[);/ ]|$)'
+      model: 'Arrows RM02'
     - regex: 'arrowsRX(?:[);/ ]|$)'
       model: 'Arrows RX'
     - regex: 'arrowsM04-PREMIUM(?:[);/ ]|$)'
@@ -7424,6 +7426,8 @@ Huawei:
       model: 'P9'
     - regex: 'VNS-L(?:[23]1|[26]2|53|23)(?:[);/ ]|$)'
       model: 'P9 Lite'
+    - regex: 'VNS-L52(?:[);/ ]|$)'
+      model: 'P9 Lite Premium'
     - regex: 'SLA-L(?:02|03|22|23)(?:[);/ ]|$)'
       model: 'P9 Lite Mini'
     - regex: 'DIG-L(?:03|23)(?:[);/ ]|$)'
