--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -339,7 +339,11 @@
   name: 'Skype for Business'
   version: '$1'
 
+# TikTok (https://apps.apple.com/app/id835599320 | https://play.google.com/store/apps/details?id=com.zhiliaoapp.musically)
 - regex: 'TikTok[/ ](\d+\.(?:[\.\d]+))?'
+  name: 'TikTok'
+  version: '$1'
+- regex: 'AppName/musical_ly app_version/(\d+\.[\.\d]+)?'
   name: 'TikTok'
   version: '$1'
 
