feat(device) detect brand Xiaomi models: Mi 8 UD, Mi 8 SE, Mi 9 Transparent Edition feat(device) test brand Xiaomi model: Mi 6 feat(device) detect brand Motorola models: RAZR (2020), One 5G Ace feat(device) test brand Philips model: S561

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11564,6 +11564,8 @@ Motorola:
       model: 'One Macro'
     - regex: 'motorola one 5G UW'
       model: 'One 5G UW'
+    - regex: 'motorola one 5G ace'
+      model: 'One 5G Ace'
     - regex: 'motorola one vision'
       model: 'One Vision'
     - regex: 'moto g stylus'
@@ -11594,6 +11596,8 @@ Motorola:
     - regex: 'MotoroiX'
       model: 'MotoroiX'
 
+    - regex: 'razr \(2020\)'
+      model: 'RAZR (2020)'
     - regex: 'Motorola[ _\-]([^/;]+)(?: Build|[);])'
       model: '$1'
     - regex: 'MOTORAZR[ _\-]([a-z0-9]+)'
@@ -18148,10 +18152,14 @@ Xiaomi:
       model: 'Mi 8 Lite'
     - regex: 'MI 8 Explorer Edition(?:[);/ ]|$)'
       model: 'Mi 8 Explorer Edition'
+    - regex: 'MI 8 ([a-z]+)(?:[);/ ]|$)'
+      model: 'Mi 8 $1'
     - regex: 'Mi 9T Pro(?:[);/ ]|$)'
       model: 'Mi 9T Pro'
     - regex: 'Mi ?9 Pro 5G(?:[);/ ]|$)'
       model: 'Mi 9 Pro 5G'
+    - regex: 'MI 9 Transparent Edition(?:[);/ ]|$)'
+      model: 'Mi 9 Transparent Edition'
     - regex: 'MI ([89]) Lite(?:[);/ ]|$)'
       model: 'Mi $1 Lite'
     - regex: 'MI 5s Plus(?:[);/ ]|$)'
