--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -666,3 +666,21 @@
     model: iPlay 8
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; ASUS Z101 Prime) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.88 Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.88
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Asus
+    model: Z101 Prime
+  os_family: Android
+  browser_family: Chrome
