feat(device) detect brand Vivo model: Y53 (1606A) feat(device) detect brand Lava model: Z6 (LMX06) feat(device) detect brand Meizu models: M8c Pro, 16Xs feat(device) detect brand Realme models: Narzo 30A (RMX3171), 6i (RMX2042) feat(device) detect brand Hoozo model: HZ1012 feat(device) detect brand AllDocube model: iPlay 30 feat(device) detect brand Krüger&Matz model: EAGLE 1070 10.5" (KM1070) feat(device) detect brand Lenovo models: Tab P11 Pro (TB-J706L), Tab P11 (TB-J606F), Smart Tab M8 (TB-8505FS), Tab M10 HD (TB-X306XA) feat(device) detect brand Xiaomi models: Mi CC 9, Mi CC 9e, Mi CC 9 Pro, Mi 8 Pro, Mi 6X, Redmi K20 Pro Premium Edition, Redmi K30 Pro

--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -7308,7 +7308,7 @@
   device:
     type: smartphone
     brand: Realme
-    model: 6I
+    model: 6i
   os_family: Android
   browser_family: Chrome
 - 
