--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3380,6 +3380,8 @@ Vivo:
       model: 'Y52s'
     - regex: 'vivo 1606(?:[);/ ]|$)'
       model: 'Y53i'
+    - regex: 'vivo 1606a(?:[);/ ]|$)'
+      model: 'Y53'
     - regex: 'vivo 1603(?:[);/ ]|$)'
       model: 'Y55l'
     - regex: 'vivo 1610(?:[);/ ]|$)'
@@ -4596,7 +4598,7 @@ Crosscall:
 
 # AllDocube (alldocube.com)
 AllDocube:
-  regex: '(?:T1001XS?|T1006S?|iPlay_[234]0|U1006H?|iPlay8)(?:[);/ ]|$)'
+  regex: '(?:T1001XS?|T1006S?|iPlay_[234]0|U1006H?|iPlay8|iPlay30)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'T1001XS(?:[);/ ]|$)'
@@ -6954,14 +6956,14 @@ Hosin:
     - regex: 'HOSIN[ _-]([^;/]+)(?:[;/)]|$)'
       model: '$1'
 
-# Hoozo
+# Hoozo (hoozoelectronics.com)
 Hoozo:
-  regex: '(?:HOOZO[_ ](MT232|MT116|MT Pad 116 LTE|X1001)|HZ0010)(?:[);/ ]|$)'
+  regex: '(?:HOOZO[_ ](MT232|MT116|MT Pad 116 LTE|X1001)|HZ0010|HZ1012)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'HOOZO[_ ](MT232|MT116|MT Pad 116 LTE|X1001)(?:[);/ ]|$)'
       model: '$1'
-    - regex: '(HZ0010)(?:[);/ ]|$)'
+    - regex: '(HZ0010|HZ1012)(?:[);/ ]|$)'
       model: '$1'
 
 # Minix (minix.us)
@@ -9097,7 +9099,7 @@ Kyocera:
 
 # Krüger&Matz (Kruger&Matz)
 Krüger&Matz:
-  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE_|LIVE_6plus|LIVE 5 PLUS|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[67]|1065G|0701_1|0702|0805_1)'
+  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE_|LIVE_6plus|LIVE 5 PLUS|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[67]|1065G|0701_1|0702|0805_1|1070)'
   device: 'smartphone'
   models:
     - regex: 'MOVE8mini'
@@ -9132,6 +9134,9 @@ Krüger&Matz:
     - regex: 'KM(106[67])(?:[);/ ]|$)'
       device: 'tablet'
       model: 'EAGLE $1 10.1"'
+    - regex: 'KM(1070)(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'EAGLE $1 10.5"'
     - regex: 'KM(1065G)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'EAGLE $1 10.1"'
@@ -9191,6 +9196,8 @@ Lava:
       model: 'R1'
     - regex: 'Z61_2GB(?:[);/ ]|$)'
       model: 'Z61'
+    - regex: 'LMX06(?:[);/ ]|$)'
+      model: 'Z6'
     - regex: 'Z60s(?:[);/ ]|$)'
       model: 'Z60s'
     - regex: 'LE9920[ _]P(?:[);/ ]|$)'
@@ -9545,8 +9552,11 @@ Lenovo:
     - regex: 'TB-X705[FL](?:[);/ ]|$)'
       model: 'Tab P10'
       device: 'tablet'
-    - regex: 'TB-J606L(?:[);/ ]|$)'
+    - regex: 'TB-J606[LF](?:[);/ ]|$)'
       model: 'Tab P11'
+      device: 'tablet'
+    - regex: 'TB-J706L(?:[);/ ]|$)'
+      model: 'Tab P11 Pro'
       device: 'tablet'
     - regex: 'TB-7104[IF](?:[);/ ]|$)'
       model: 'Tab E7'
@@ -9659,6 +9669,9 @@ Lenovo:
       device: 'tablet'
     - regex: 'Yoga Tablet([^;/]+) Build'
       model: 'Yoga Tablet$1'
+      device: 'tablet'
+    - regex: 'TB-8505FS'
+      model: 'Smart Tab M8'
       device: 'tablet'
     - regex: 'TB-8505[FX]'
       model: 'Tab M8'
@@ -11027,6 +11040,8 @@ Meizu:
       model: 'M8'
     - regex: '(?:M1816|M8 lite)(?:[);/ ]|$)'
       model: 'M8 Lite'
+    - regex: 'M8c Pro(?:[);/ ]|$)'
+      model: 'M8c Pro'
 
     - regex: 'PRO 7-[HS](?:[);/ ]|$)'
       model: 'PRO 7'
@@ -12565,7 +12580,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|91)|3350)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|91|71)|3350)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -12608,8 +12623,8 @@ Realme:
       model: '5i'
     - regex: 'RMX2001'
       model: '6'
-    - regex: 'RMX2040'
-      model: '6I'
+    - regex: 'RMX204[02]'
+      model: '6i'
     - regex: 'RMX2002'
       model: '6S'
     - regex: 'RMX206[13](?:[);/ ]|$)'
@@ -12666,6 +12681,8 @@ Realme:
       model: 'Narzo 20'
     - regex: 'RMX2050(?:[);/ ]|$)'
       model: 'Narzo 20A'
+    - regex: 'RMX3171(?:[);/ ]|$)'
+      model: 'Narzo 30A'
     - regex: 'RMX3242'
       model: 'Narzo 30 5G'
     - regex: 'RMX1831(?:[);/ ]|$)'
@@ -18131,7 +18148,11 @@ Xiaomi:
       model: 'Mi Play'
     - regex: 'Mi 9 SE(?:[);/ ]|$)'
       model: 'Mi 9 SE'
-    - regex: 'MI CC 9 Meitu Edition(?:[);/ ]|$)'
+    - regex: 'MI CC 9e'
+      model: 'Mi CC 9e'
+    - regex: 'MI CC9 Pro'
+      model: 'Mi CC 9 Pro'
+    - regex: 'MI CC 9(?: Meitu Edition)?(?:[);/ ]|$)'
       model: 'Mi CC 9'
     - regex: 'Xiaomi_M2001J2E_TD-LTE(?:[);/ ]|$)'
       model: 'Mi 10'
@@ -18237,8 +18258,10 @@ Xiaomi:
       model: 'Redmi 9C NFC'
     - regex: 'M2004J7BC(?:[);/ ]|$)'
       model: 'Redmi 10X Pro'
-    - regex: 'Redmi K20 Pro(?:[);/ ]|$)'
-      model: 'Redmi K20 Pro'
+    - regex: 'Redmi K20 Pro Premium Edition(?:[);/ ]|$)'
+      model: 'Redmi K20 Pro Premium Edition'
+    - regex: 'Redmi K([23]0) Pro(?:[);/ ]|$)'
+      model: 'Redmi K$1 Pro'
     - regex: 'Redmi K30 5G(?:[);/ ]|$)'
       model: 'Redmi K30 5G'
     - regex: 'M2012K11AC(?:[);/ ]|$)'
