feat(device) detect brand Lenovo models: Vibe Shot (Z90-7), Vibe X3 (X3c50), Vibe X3 Lite

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9737,8 +9737,10 @@ Lenovo:
       model: 'Vibe C'
     - regex: 'VIBE X2(?:[);/ ]|$)'
       model: 'Vibe X2'
-    - regex: 'X3a40(?:[);/ ]|$)'
+    - regex: 'X3(?:a40|c50)(?:[);/ ]|$)'
       model: 'Vibe X3'
+    - regex: 'Lenovo X3 Lite(?:[);/ ]|$)'
+      model: 'Vibe X3 Lite'
     - regex: 'VIBE V7(?:[);/ ]|$)'
       model: 'Vibe V7'
     - regex: 'VIBE S6i Plus(?:[);/ ]|$)'
@@ -9767,7 +9769,7 @@ Lenovo:
       model: 'Vibe B'
     - regex: 'A1010a20(?:[);/ ]|$)'
       model: 'A Plus'
-    - regex: 'Z90a40(?:[);/ ]|$)'
+    - regex: '(?:Z90a40|Z90-7)(?:[);/ ]|$)'
       model: 'Vibe Shot'
     - regex: 'S1a40(?:[);/ ]|$)'
       model: 'Vibe S1'
