feat(bot) detect bot: Google StoreBot

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -584,6 +584,10 @@
     name: 'NTT Resonant'
     url: 'http://goo.ne.jp'
 
+- regex: 'Storebot-Google'
+  name: 'Google StoreBot'
+  category: 'Crawler'
+
 - regex: 'Google Favicon'
   name: 'Google Favicon'
   category: 'Crawler'
