--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4395,3 +4395,8 @@
     name: Turnitin
     category: Crawler
     url: https://turnitin.com/robot/crawlerinfo.html
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.0; Pixel 2 Build/OPD3.170816.012; Storebot-Google/1.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Mobile Safari/537.36
+  bot:
+    name: Google StoreBot
+    category: Crawler
