--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21656,7 +21656,7 @@ Openbox:
   regex: '(?:Openbox (?:A[34](?: (?:Pro|Lite))?)|AS_4K_CI(?:_PRO)?)(?:[);/ ]|$)'
   device: 'tv'
   models:
-    - regex: 'Openbox (?:A[34](?: (?:Pro|Lite))?(?:[);/ ]|$)'
+    - regex: 'Openbox (A[34](?: (?:Pro|Lite))?)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'AS_4K_CI_PRO'
       model: 'AS 4K CI Pro'
