feat(bot) detect bot Dotcom Monitor
issue #6833

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2568,12 +2568,17 @@
   category: 'Crawler'
   url: 'https://github.com/VIPnytt/SitemapParser/'
 
-# Generic detections
 
 - regex: '^Turnitin'
   name: 'Turnitin'
   category: 'Crawler'
   url: 'https://turnitin.com/robot/crawlerinfo.html'
 
+- regex: 'DMBrowser/\d+|DMBrowser-[UB]V'
+  name: 'Dotcom Monitor'
+  category: 'Site Monitor'
+  url: 'https://www.dotcom-monitor.com'
+
+# Generic detections
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
   name: 'Generic Bot'
