--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4400,3 +4400,15 @@
   bot:
     name: Google StoreBot
     category: Crawler
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.56 Safari/537.36 DMBrowser/2.1 (UV)
+  bot:
+    name: Dotcom Monitor
+    category: Site Monitor
+    url: https://www.dotcom-monitor.com
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:29.0) Gecko/20100101 /29.0 DMBrowser-BV
+  bot:
+    name: Dotcom Monitor
+    category: Site Monitor
+    url: https://www.dotcom-monitor.com
