feat(app) detect app AliExpress
issue #6452

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -629,3 +629,15 @@
     type: mobile app
     name: QuickCast
     version: ""
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; zh-CN; SM-A515F Build/RP1A.200720.012) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/69.0.3497.100 UWS/3.22.1.117 Mobile Safari/537.36 AliApp(AliexpressAndroid/8.28.0) UCBS/2.11.1.1
+  client:
+    type: mobile app
+    name: AliExpress
+    version: 8.28.0
+-
+  user_agent: M2003J15SC(Android/11) AliApp(AliExpress/8.5.1) Weex/0.26.4.9-ae vercode/307 1080x2110
+  client:
+    type: mobile app
+    name: AliExpress
+    version: 8.5.1
