--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -602,6 +602,11 @@
   name: 'QuickCast'
   version: ''
 
+# AliExpress (https://play.google.com/store/apps/details?id=com.alibaba.aliexpresshd)
+- regex: 'Aliexpress(?:Android)?/([\d\.]+)'
+  name: 'AliExpress'
+  version: '$1'
+
 # https://www.n-tv.de/
 - regex: 'ntvmobil/'
   name: 'NTV Mobil'
