feat(app) detect app COAF SMART Citizen
issue #6452

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -647,3 +647,9 @@
     type: mobile app
     name: Blue Proxy
     version: 1.0.18
+-
+  user_agent: COAF%20SMART%20Citizen/3331 CFNetwork/1206 Darwin/20.1.0
+  client:
+    type: mobile app
+    name: COAF SMART Citizen
+    version: ""
