--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -616,3 +616,8 @@
 - regex: 'ntvmobil/'
   name: 'NTV Mobil'
   version: ''
+
+# COAF SMART Citizen (https://apps.apple.com/app/id1478339047)
+- regex: 'COAF%20SMART%20Citizen/'
+  name: 'COAF SMART Citizen'
+  version: ''
